# cortex-m-cmake-vscode

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/modules/: CMakeLists.txt
src/modules/delay/: CMakeLists.txt  delay.c  delay.h
src/platform/: CMakeLists.txt
src/platform/include/: gpio.h  system.h  uart.h
src/platform/stm32f4xx/: CMakeLists.txt  gpio.c  system.c  uart.c
src/utils/: CMakeLists.txt
